--- a/xne-express/config/config.development.json
+++ b/xne-express/config/config.development.json
@@ -12,36 +12,26 @@
         "dbName": "xne"
     },
     "mysql": {
-        "host": null,
-        "db": "bngj",
-        "username": null,
-        "password": null,
-        "options": {
-            "dialect": "mysql",
-            "port": 3306,
-            "logging": false,
-            "replication": {
-                "read": [{
-                    "host": "192.168.18.36",
-                    "username": "blockchain",
-                    "password": "blockchain2017!"
-                }],
-                "write": {
-                    "host": "192.168.18.36",
-                    "username": "blockchain",
-                    "password": "blockchain2017!"
-                }
+        "user": "root",
+        "password": "123",
+        "database": "local-hl",
+        "orm": {
+        "dialect": "mysql",
+        "host": "127.0.0.1",
+        "port": 3306,
+        "pool": {
+            "max": 100,
+            "min": 0,
+            "idle": 10000,
+            "handleDisconnects": true
             },
-            "pool": {
-                "maxConnections": 20,
-                "maxIdleTime": 30000,
-                "max": 20,
-                "min": 0,
-                "idle": 20000,
-                "acquire": 20000
-            }
+        "dialectOptions": {
+            "connectTimeout": 10000
+            },
+        "logging": true,
+        "timezone": "+08:00"
         }
-    },
+},
     "redis": {
         "host": "localhost",
         "port": 6379,
