--- a/xne-express/config/config.json
+++ b/xne-express/config/config.json
@@ -9,39 +9,27 @@
     },
     "mongo": {
         "hostUrl": "127.0.0.1:27017",
-        "dbName": "article",
-        "useCreateIndex": true,
-        "useNewUrlParser": true
+        "dbName": "xne"
     },
     "mysql": {
-        "host": null,
-        "db": "bngj",
-        "username": null,
-        "password": null,
-        "options": {
+        "user": "root",
+        "password": "123",
+        "database": "local-hl",
+        "orm": {
             "dialect": "mysql",
+            "host": "127.0.0.1",
             "port": 3306,
-            "logging": false,
-            "replication": {
-                "read": [{
-                    "host": "192.168.18.36",
-                    "username": "blockchain",
-                    "password": "blockchain2017!"
-                }],
-                "write": {
-                    "host": "192.168.18.36",
-                    "username": "blockchain",
-                    "password": "blockchain2017!"
-                }
-            },
             "pool": {
-                "maxConnections": 20,
-                "maxIdleTime": 30000,
-                "max": 20,
+                "max": 100,
                 "min": 0,
-                "idle": 20000,
-                "acquire": 20000
-            }
+                "idle": 10000,
+                "handleDisconnects": true
+            },
+            "dialectOptions": {
+                "connectTimeout": 10000
+            },
+            "logging": true,
+            "timezone": "+08:00"
         }
     },
     "redis": {
